<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backgroundimg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundopacity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical" >


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            app:srcCompat="@drawable/foodiconthird"
            app:tint="@color/white"
            android:contentDescription="@string/mymainactivitypagelogo" />

        <TextView
            android:id="@+id/cafehouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="8dp"
            android:shadowColor="#fff"
            android:text="@string/cafe_house"
            android:textColor="@color/white"
            android:textSize="60sp" />


        <RelativeLayout
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/btn_gradient2"
            android:padding="8dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnregisterom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_gradient2"
            android:padding="8dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#FAF7F5F5"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="DuplicateIds" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/skip"
            android:textColor="#FDF7F3F3"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


        </ScrollView>


    </LinearLayout>



</RelativeLayout>