<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin_Activity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/foodiconthird"
                    app:tint="@color/tintlogocolor"
                    android:contentDescription="@string/mymainactivitypagelogo" />

                <TextView
                    android:id="@+id/cafehouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/cafe_house"
                    android:textColor="#EF6C00"
                    android:textSize="60sp" />


                <EditText
                    android:id="@+id/editTextTextEmailAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/rakeshkumarvishu123_gmail_com"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:autofillHints=""
                    tools:ignore="VisualLintTextFieldSize" />


                <EditText
                    android:id="@+id/editTextTextPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/passwordsample"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:autofillHints=""
                    tools:ignore="VisualLintTextFieldSize" />

                <RelativeLayout
                    android:id="@+id/btnregister"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn_gradient2"
                    android:padding="8dp">


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="#FFF7F2F2"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:background="@color/startcolorgradient"
                        android:layout_marginEnd="5dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_marginRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or_with"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginEnd="5dp" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@color/startcolorgradient"
                        android:layout_marginRight="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/fbbackground"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/facebook"
                        android:textColor="#F1EBEB"
                        app:drawableLeftCompat="@drawable/facebook" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/googlebackground"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/google"
                        android:textColor="#FAF7F7"
                        app:drawableLeftCompat="@drawable/googleplus" />
                </LinearLayout>

                <TextView
                    android:id="@+id/wanttocreateaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/want_to_create_account"
                    android:textColor="#FC000000"
                    android:textStyle="bold" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>